[package]
name = "gm_speech"
authors = ["Earu"]
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
gmod = { version = "*", default-features = false, features = ["gmcl"] }
anyhow = "1"
once_cell = "1"
parking_lot = "0.12"
crossbeam-channel = "0.5"
cpal = "0.15"
whisper-rs = "0.11"